# backend

./: .env  .gitignore  =3.3.2  Dockerfile  Dockerfile.worker  compose.yml  main.py  pyproject.toml  requirements.txt  rockstar.txt  worker.py
backend/: config.py  router.py
backend/celery/: worker.py
backend/db/: __all_models.py  annotations.py  crud.py  database.py  db.dbml  dependencies.py  enums.py  models.py
backend/model/: router.py
backend/recordings/: S3Model.py  models.py  relschemas.py  router.py  schemas.py
backend/results/: models.py  relschemas.py  router.py  schemas.py
backend/sound/: sound.py
backend/tags/: models.py  router.py  schemas.py
backend/users/: auth.py  models.py  router.py
backend/worker/: .env  Dockerfile  pyproject.toml  requirements.txt  router.py  worker.py
backend/worker/ML/: .gitignore  README.md  asr_inference.py  filter_abstract.py  main.py  model_abstract.py  requirements.txt  utils.py
backend/worker/ML/conf/: config.py  ctc_model_config.yaml  rnnt_model_config.yaml
backend/worker/ML/conf/tokenizer_all_sets/: tokenizer.vocab  vocab.txt
backend/worker/ML/notebooks/: VK_Audio_Clean_Work.ipynb  Word_parasites_detection_Seminar_updated.ipynb
backend/worker/ML/tests/: tests_filter.py  tests_forced_alignment.py  tests_integration.py  tests_models_devices.py  tests_transcribe.py
backend/worker/ML/wordlist/: profanity_dict_filter.txt
backend/worker/ml1/: main.py  model_abstract.py
backend/worker/ml1/conf/: config.py
db/: postmaster.pid
db/global/: 1260  1262  (+3 more)
nginx/: nginx.conf
sound_filter/: mamai.py
(+65 files in other folders)
